# llvm-project

offload/: CMakeLists.txt
offload/include/: device.h
offload/plugins-nextgen/common/include/: PluginInterface.h
offload/plugins-nextgen/common/src/: PluginInterface.cpp
offload/plugins-nextgen/host/src/: rtl.cpp
offload/plugins-nextgen/mpi/: CMakeLists.txt
offload/plugins-nextgen/mpi/event_system/: EventSystem.cpp  EventSystem.h
offload/plugins-nextgen/mpi/src/: ProxyDevice.cpp  RemotePluginManager.cpp  RemotePluginManager.h  rtl.cpp
offload/plugins-nextgen/mpiproxy/: CMakeLists.txt
offload/plugins-nextgen/mpiproxy/event_system/: CMakeLists.txt  EventSystem.cpp  EventSystem.h
offload/plugins-nextgen/mpiproxy/host-plugin/: CMakeLists.txt
offload/plugins-nextgen/mpiproxy/host-plugin/src/: rtl.cpp
offload/plugins-nextgen/mpiproxy/src/: ProxyDevice.cpp  RemotePluginManager.cpp  RemotePluginManager.h
offload/src/: PluginManager.cpp  device.cpp  exports  omptarget.cpp
offload/src/OpenMP/: API.cpp
offload/test/: lit.cfg
offload/test/libc/: assert.c  host_call.c
offload/test/offloading/: bug49334.cpp  default_thread_limit.c  target_critical_region.cpp  thread_limit.c
openmp/runtime/src/include/: omp.h.var
